--- a/templates/projects/gehna.html
+++ b/templates/projects/gehna.html
@@ -49,7 +49,7 @@
 </header>
 <section class="home" data-section-name="home" id="home">
     <div class="jumbotron jumbotron-fluid bg_project">
-        <img src="../../static/projectplaceholder.jpeg" style="object-fit: cover; width: 100vw; height: 100vh;">
+        <img src="../../static/gehna.jpg" style="object-fit: cover; width: 100vw; height: 100vh;">
         <!--<video playsinline autoplay muted loop>-->
         <!--<source src="../../static/final.webm" type="video/webm">-->
         <!--</video>-->
@@ -59,50 +59,34 @@
 <section style="margin-top: -200px;">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12"
+            <div class=" offset-lg-1 col-lg-10 col-sm-12 col-xs-12"
                  style="background-color: white; height: 100vh; padding-left: 100px; padding-right: 100px; padding-top: 50px;">
-                <h1>Gehna</h1>
-                <p style="line-height: 1px;">Aryan Saini, Kartik Mathur, Nirmita Mehra, et al.</p>
-                <br>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Nunc id cursus metus aliquam eleifend mi. Enim praesent elementum facilisis
-                    leo vel fringilla. Commodo sed egestas egestas fringilla. Ultricies mi quis hendrerit dolor magna.
-                    Nibh praesent tristique magna sit amet. Gravida cum sociis natoque penatibus et magnis. Velit ut
-                    tortor pretium viverra suspendisse potenti nullam ac. Egestas integer eget aliquet nibh praesent
-                    tristique magna sit amet. Porttitor leo a diam sollicitudin tempor id. Sit amet luctus venenatis
-                    lectus magna fringilla. Aliquam etiam erat velit scelerisque. Etiam non quam lacus suspendisse
-                    faucibus interdum. Condimentum id venenatis a condimentum vitae sapien pellentesque habitant.
-                </p>
-                <p>
-                    Laoreet id donec ultrices tincidunt arcu non sodales neque. Tempor commodo ullamcorper a lacus
-                    vestibulum sed arcu. Nulla facilisi cras fermentum odio. Leo urna molestie at elementum eu facilisis
-                    sed odio. Turpis egestas maecenas pharetra convallis posuere morbi leo urna molestie. Pretium
-                    viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Interdum consectetur libero id
-                    faucibus. Ultrices in iaculis nunc sed augue lacus viverra vitae congue. Tincidunt augue interdum
-                    velit euismod in pellentesque massa placerat. Quam id leo in vitae turpis massa sed elementum
-                    tempus. At in tellus integer feugiat scelerisque.
-                </p>
-                <p>
-                    Egestas quis ipsum suspendisse ultrices. Gravida arcu ac tortor dignissim convallis aenean et
-                    tortor. Tellus mauris a diam maecenas. Pulvinar elementum integer enim neque volutpat ac tincidunt.
-                    Placerat orci nulla pellentesque dignissim enim sit. Fusce id velit ut tortor pretium. Fames ac
-                    turpis egestas integer eget aliquet nibh praesent tristique. Tincidunt tortor aliquam nulla facilisi
-                    cras fermentum odio eu. Consequat interdum varius sit amet. Pharetra sit amet aliquam id. Et tortor
-                    at risus viverra adipiscing.
-                </p>
-                <p>
-                    Eget nullam non nisi est sit. Vitae turpis massa sed elementum tempus. Aenean euismod elementum nisi
-                    quis eleifend quam adipiscing vitae proin. Lacus viverra vitae congue eu. Lorem ipsum dolor sit
-                    amet. Nibh tortor id aliquet lectus proin. Vivamus arcu felis bibendum ut tristique et egestas quis
-                    ipsum. Egestas integer eget aliquet nibh praesent tristique. Blandit libero volutpat sed cras ornare
-                    arcu dui vivamus. Fames ac turpis egestas integer eget aliquet nibh praesent tristique. Condimentum
-                    mattis pellentesque id nibh. Viverra accumsan in nisl nisi scelerisque. Aliquam faucibus purus in
-                    massa tempor nec. Egestas sed tempus urna et pharetra pharetra massa massa. Condimentum vitae sapien
-                    pellentesque habitant morbi tristique senectus et. Nisl purus in mollis nunc sed id. Diam in arcu
-                    cursus euismod quis. Mauris vitae ultricies leo integer. Odio eu feugiat pretium nibh ipsum. In
-                    massa tempor nec feugiat.
-                </p>
+                <!--<div style="text-align:center;">-->
+                <div style="padding-left: 20px; padding-right: 20px;">
+                    <h1 style="  font-family: 'Playfair Display', serif; font-size: 2.5rem;">Gehna: Exploring the Design Space of Jewelry
+                        as an Input Modality</h1>
+                    <em>
+                        <p style="line-height: 15px;">Aryan Saini, Kartik Mathur, Nirmita Mehra, et al.</p>
+                    </em>
+
+                    <br>
+                    <p>
+                        Gehna or jewelry weaves into our everyday life like no other wearable does. In this work, we
+                        explore
+                        jewelry to enable wearable-based input. We used a Research through Design (RtD) method to
+                        combine
+                        perspectives from the fields of jewelry design, input techniques, and wearable computing, along
+                        with
+                        our hands-on study of a sample set of ornaments to formulate the design space of jewelry-enabled
+                        input. We prototyped our input techniques through suitable sensing methods, implemented a set of
+                        applications to demonstrate the versatility of the platform. This work was (conditionally)
+                        accepted
+                        at CHI 2019. Camera ready version can be found <a href="">here</a>.
+                    </p>
+
+                    <img src="../../static/gehna1.jpg" style="width: 100%;">
+                    <img src="../../static/gehna2.jpg" style="width: 100%;">
+                </div>
             </div>
         </div>
     </div>
