--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,10 @@ body {
   /* margin-bottom: 20px; */
 }
 
+.footer-link > a{
+  color: black;
+}
+
 .navbar {
   background-color: transparent;
   color: white;
