--- a/static/style.css
+++ b/static/style.css
@@ -277,7 +277,14 @@ video {
   margin: 0px 40px;
   margin-bottom: 40px;
   background-color: rgb(255, 255, 255);
+
   height: 35vw;
+}
+
+.re_img_overlay{
+  opacity: 0.5;
+  -webkit-filter: grayscale(70%);
+  filter: grayscale(70%);
 }
 .re_img h4{
   position: absolute;
