Deployable website with all content

--- a/static/css/min.style.css
+++ b/static/css/min.style.css
@@ -482,7 +482,7 @@
 
     .projectData {
         background-color: white;
-        height: 100vh;
+        /*height: 100vh;*/
         padding-left: 0;
         padding-right: 0;
         padding-top: 50px;
