--- a/static/style.css
+++ b/static/style.css
@@ -120,7 +120,7 @@ video {
   right: 0;
   top: 0;
   width: 100%;
-  transform: scale(1.35);
+  /* transform: scale(1.35); */
 }
 
 .weave_logo{
@@ -132,7 +132,6 @@ video {
 }
 .weave_logo img{
   max-width:50%;
-  max-height: 50%;
   height: auto;
   width: auto;
 }
@@ -163,10 +162,9 @@ video {
   margin: 1em;
   margin-top: 2em;
 }
-.social_media li a{
-  /* margin: 3em; */
-  font-size: 0.7em;
-  color: white;
+.social_media li a img{
+  width: 2rem;
+  height: auto;
   z-index: 5;
   transition: 0.4s;
 }
@@ -213,8 +211,8 @@ video {
 .about h1{
   font-family: 'Playfair Display', serif;
   color: #F5A623;
-  font-size: calc(70px + 1.5vw);
-  line-height: calc(60px + 2vw);
+  font-size: calc(60px + 1.5vw);
+  line-height: calc(60px + 1.5vw);
   float: inherit;
 }
 
@@ -234,7 +232,10 @@ video {
   float: right;
   margin-right: 1vw;
 }
-
+#research{
+  margin-left: 20px;
+  margin-right: 20px;
+}
 .research{
   position: relative;
   background-color: black;
@@ -247,7 +248,7 @@ video {
   position: relative;
   font-family: 'Playfair Display', serif;
   color: white;
-  font-size: calc(70px + 1.5vw);
+  font-size: calc(50px + 1vw);
   padding-left: calc(13vw - 20px);
   margin-bottom: calc(50px + 2vw);
   width: 60vw;
@@ -275,12 +276,12 @@ video {
   padding-left: 0;
   padding-right: 0;
   overflow: hidden;
-  max-width: 38vw;
-  margin: 0px 40px;
+  max-width: 32vw;
+  margin: 0px 80px;
   margin-bottom: 40px;
   background-color: rgb(255, 255, 255);
 
-  height: 35vw;
+  height: 32vw;
 }
 
 .re_img_overlay{
@@ -303,6 +304,11 @@ video {
   z-index: 10;
   color: black;
 }
+
+.re_img h3 span{
+  font-size: 1.25rem;
+}
+
 .re_img a img {
   -webkit-transition: 0.6s ease;
   transition: 0.6s ease;
@@ -342,7 +348,7 @@ img{
 .contact h1{
   font-family: 'Playfair Display', serif;
   color: #F5A623;
-  font-size: calc(70px + 1.5vw);
+  font-size: calc(60px + 1.5vw);
   margin-bottom: calc(40px + 1vw);
 
   /*line-height: calc(60px + 2vw);*/
