--- a/static/media_style.css
+++ b/static/media_style.css
@@ -1,6 +1,16 @@
 
 /* // Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
+
+    #research{
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+
+    .social_media li a img{
+        width: 1rem;
+      }
+
     .social_media li a{
         font-size: 0.4em;
     }
@@ -28,6 +38,7 @@
         padding-top: 100px;
         margin-left: 0;
         margin-right: 0;
+        margin-bottom: 16vw;
         padding-left: 13vw;
         padding-right: 13vw;
         width: 100%;
@@ -70,6 +81,15 @@
         height: 55vw;
         max-width: 55vw;
     }
+
+    .re_img h3{
+        font-size: 1.2rem;
+    }
+
+    .re_img h3 span{
+        font-size: 0.8rem;
+    }
+
     .see_more h5{
         visibility: hidden;
     }
@@ -113,6 +133,16 @@
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 576.1px) and (max-width: 768px) {
+    
+    #research{
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+
+    .social_media li a img{
+        width: 1.5rem;
+      }
+
     .about{
         padding-top: 150px;
         margin-left: 0;
@@ -122,7 +152,7 @@
         width: 100%;
     }
     .about h1{
-        font-size: 10vw;
+        font-size: 9vw;
         line-height: 9.5vw;
         text-align: center;
     }
@@ -138,7 +168,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 60%;
+        width: 75%;
         float: none;
     }
     .contact{
@@ -149,7 +179,7 @@
         width: 100%;
     }
     .contact h1{
-        font-size: 10vw;
+        font-size: 9vw;
         line-height: 9.5vw;
         text-align: center;
     }
@@ -171,7 +201,7 @@
         padding: 0 0;
         text-align: center;
         width: auto;
-        font-size: 10vw;
+        font-size: 9vw;
 
     }
     .mob_seeMore{
@@ -201,6 +231,16 @@
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 768.1px) and (max-width: 992px) {
+
+    #research{
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+
+    .social_media li a img{
+        width: 1.8rem;
+      }
+
     .about{
         margin-left: 0;
         margin-right: 0;
@@ -209,8 +249,8 @@
         width: 100%;
     }
     .about h1{
-        font-size: 10vw;
-        line-height: 9.5vw;
+        font-size: calc(50px + 2vw);
+        line-height: calc(50px + 2vw);
         text-align: center;
     }
     .about .about-data p{
@@ -224,7 +264,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 60%;
+        width: 75%;
         float: none;
     }
     .contact{
@@ -235,8 +275,8 @@
         width: 100%;
     }
     .contact h1 {
-        font-size: 10vw;
-        line-height: 9.5vw;
+        font-size: calc(50px + 2vw);
+        line-height: calc(50px + 2vw);
         text-align: center;
     }
     .re_img{
@@ -257,7 +297,7 @@
         padding: 0 0;
         text-align: center;
         width: auto;
-        font-size: 10vw;
+        font-size: calc(50px + 2vw);
 
     }
     .mob_seeMore{
@@ -281,23 +321,29 @@
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 992.1px) and (max-width: 1200px) {
+    
+    #research{
+        margin-left: 18px;
+        margin-right: 18px;
+      }
+
     .about{
         margin-left: 0;
         margin-right: 0;
-        padding-left: 13vw;
-        padding-right: 13vw;
+        padding-left: 15vw;
+        padding-right: 15vw;
         width: 100%;
     }
     .about h1{
-        font-size: 10vw;
+        font-size: calc(50px + 3vw);
         text-align: center;
-        line-height: 9.5vw;
+        line-height: calc(50px + 3vw);
     }
     
     .about .about-data p{
         padding-top: 1.2em;
         padding-left: 0.2em;
-        font-size: 2.5vw;
+        font-size: 2vw;
         width: auto;
         text-align: center;
     }
@@ -306,9 +352,16 @@
         margin-top: 2em;
         margin-left: auto;
         margin-right: auto;
-        width: 60%;
+        width: 75%;
         float: none;
     }
+
+    .research h1{
+        text-align: center;
+        padding-left: 0px;
+        width: 100%;
+    }
+
     .contact{
         margin-left: 0;
         margin-right: 0;
