--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,53 @@ body {
   color: #F5A623;
 }
 
+.nav-item{
+  display: inline-block;
+  text-align: center;
+}
+.exp {
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+
+.exp:before, .exp:after {
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 1px;
+  bottom: 5px;
+  margin-top: -0.5px;
+  background: #F5A623;
+}
+.exp:before {
+  left: 0px;
+}
+.exp:after {
+  right: 0px;
+  background: #F5A623;
+  transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+.exp:hover:before {
+  background: #F5A623;
+  width: 100%;
+  transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+.exp:hover:after {
+  background: transparent;
+  width: 100%;
+  transition: 0s;
+}
+.nav-link.active:before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 5px;
+  margin-top: -0.5px;
+  background: #F5A623;
+  transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
 
 .navbar-dark .navbar-toggler{
   border-color: transparent;
@@ -73,6 +120,7 @@ body {
 
 .navbar-dark .navbar-nav .nav-link{
   text-align: center;
+  display: inline-block;
 }
 
 #menu.scrolling{
@@ -90,6 +138,7 @@ body {
 .scrolling .navbar-nav .nav-link:hover, .scrolling .navbar-nav .nav-link.active{
   color: #F5A623;
 }
+
 .navbar-brand {
   padding-left: 0.5em;
   padding-bottom: 0;
@@ -132,6 +181,7 @@ video {
 }
 .weave_logo img{
   max-width:50%;
+  max-height: 50%;
   height: auto;
   width: auto;
 }
